--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [tool.poetry]
 name = "pyaltherma"
-version = "0.0.11"
-description = "Python scripts for controlling Daikin Altherma heat pump."
+version = "0.0.12"
+description = "Python scripts for controlling Daikin Altherma heat pump using BRP069A62 LAN adapter."
 readme = "README.md"
 authors = ["Tadas Danielius"]
 license = "MIT"
 homepage = "https://github.com/tadasdanielius/pyaltherma"
 repository = "https://github.com/tadasdanielius/pyaltherma"
-keywords = ["daikin", "altherma", "heatpump"]
+keywords = ["daikin", "altherma", "heatpump", "brp069A62", 'brp069A61']
 classifiers = ["Development Status :: 3 - Alpha"]
 
 [tool.poetry.dependencies]
